# APEX_CMZ_H2CO

./: .gitignore  MPI_instructions.txt  README.md  make_apex_cubes.py  make_data_release.py  off_position_selection.py  off_positions_selectedfromDame2001.reg  paths.py  pip-requirements  reg_to_apex.py  setup.cfg  setup.py  target_fields_8x8.reg  target_fields_8x8_coloredbyoffposition.reg  target_fields_P93ESO.APEX  target_fields_reorganized.reg
ESO_P93/: eso_script.apecs  target_fields_P93ESO_8x8.APEX
analysis/: README.rst  ammonia_temperature.py  backstream_pv.py  bootstrap_errors.py  cats_for_cds.py  cloud.desp  co_cubes.py  common_constants.py  constrain_parameters.py  constrain_parameters_4to3.py  dendro_based_specfitting.py  dendro_glue.py  dendro_glue_sm.py  dendro_mask.py  dendro_peak_test.py  dendro_temperature.py  dendro_vs_time.py  dendrograms.py  dendrotem_plots.py  despotic_heating.py  do_all_analysis.py  example_parplot_constraint.py  fit_the_brick.py  fitted_line_parameters.ipac  fitted_line_parameters_Chi2Constraints.ipac  flag_other_lines.py  full_cubes.py  gaussian_correction.py  glue_cat.py  heating.py  higal_gridded.py  individual_spectra.py  integrate_dendrotem_cubes.py  latex_info.py  lines.py  longitude_temperature_stack.py  make_piecewise_temcube.py  make_ratio_integ.py  make_ratiotem_cubesims.py  make_temperature_cube.py  (+25 more)
cds/: README
code/: figure_ratio_maps.py  individual_spectra.py  obs_stats.py  param_plots.py  paths.py  pyspeckit_fitting.py  reduce_map3_crosscans.py  tmap_figure.py
mpiobs_m0009_93/: M0009_93-target.apecs  M0009_93.cat  (+2 more)
(+144 files in other folders)
