[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = shfi_otf_pipeline
description = SHFI OTF pipeline (APEX)
long_description = A pipeline for OTF data
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = https://github.com/keflavich/APEX_CMZ_H2CO
edit_on_github = False
github_project = keflavich/APEX_CMZ_H2CO
